# phalcom-lang

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  package-lock.json
examples/: calculator.ph  calculator.phalcom  core_new.ph  core_new.phalcom  person.ph  person.phalcom  person2.phalcom  person3.ph  person3.phalcom  simple.ph  simple.phalcom  simple_class.ph  simple_class.phalcom
phalcom/: Cargo.toml
phalcom-ast/: Cargo.toml
phalcom-ast/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.lalrpop  token.rs  util.rs
phalcom-common/: Cargo.toml
phalcom-common/src/: error.rs  lib.rs  range.rs  refs.rs
phalcom-compiler/: Cargo.toml
phalcom-compiler/src/: error.rs  lib.rs
phalcom-core/: Cargo.toml
phalcom-core/src/: bytecode.rs  class.rs  diagnostics.rs  error.rs  frame.rs  instance.rs  interner.rs  lib.rs  string.rs  value.rs  vm.rs
phalcom-core/src/compiler/: lib.rs  mod.rs
phalcom-core/src/primitive/: boolean.rs  mod.rs  nil.rs  number.rs  object.rs  string.rs  symbol.rs
phalcom-syntax/: Cargo.toml
phalcom-syntax/src/: ast.rs
phalcom-vm/: Cargo.toml
phalcom-vm/src/: boolean.rs  bootstrap.rs  bytecode.rs  callable.rs  chunk.rs  class.rs  closure.rs  compiler.rs  diagnostics.rs  error.rs  frame.rs  instance.rs  interner.rs  lib.rs  method.rs  module.rs  nil.rs  object.rs  primitive.rs  string.rs  universe.rs  value.rs  vm.rs
phalcom-vm/src/primitive/: class.rs  method.rs  mod.rs  module.rs  number.rs  object.rs  string.rs  symbol.rs  system.rs
phalcom/src/: cli.rs  disasm.rs  main.rs
phalcomc/: Cargo.toml
phalcomc/src/: main.rs
tests/: newline_in_method_block.ph
