[workspace]
members = [
    "phalcom-ast",
    "phalcom-common",
    "phalcom-core",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.12"
miette = { version = "7.6.0", features = ["fancy"] }
rustyline = "16.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std"] }
indexmap = "2.9.0"
once_cell = "1.21.3"
anyhow = "1.0.98"
