[package]
name = "phalcom-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = "0.22.2"
phalcom-ast = { path = "../phalcom-ast" }
phalcom-common = { path = "../phalcom-common" }
phalcom-vm = { path = "../phalcom-vm" }
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.9.2"
