[package]
name = "phalcom-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "phalcom"
path = "bin/phalcom/main.rs"

[dependencies]
lalrpop-util = "0.22.2"
phalcom-ast = { path = "../phalcom-ast" }
phalcom-common = { path = "../phalcom-common" }
indexmap = { workspace = true }
thiserror = "2.0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = "1.5.0"
rand = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
color-print = "0.3.7"

[build-dependencies]
lalrpop = "0.22.2"