[package]
name = "phalcom-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
phalcom-common = { path = "../phalcom-common" }
indexmap = { workspace = true }
thiserror = "2.0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = "1.5.0"

[build-dependencies]
lalrpop = "0.22.2"