[package]
name = "phalcom"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
phalcom-ast = { path = "../phalcom-ast" }
phalcom-common = { path = "../phalcom-common" }
phalcom-compiler = { path = "../phalcom-compiler" }
phalcom-vm = { path = "../phalcom-vm" }
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
